@@ -1,5 +1,8 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+New function yaz_strerror which is a portable wrapper for
+strerror/strerror_r/GetLastMessage.
+
 ZOOM_record_get supports type "xml" in which case OAI MARC is
 returned for MARC. If type is "MarcXML" , MARC XML is returned.
 
